Implement basic validation for rectangles collision attributes interactor